# bazel-tui

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
.github/workflows/: test.yml
test/: main.go
