module(
    name = "bazel-go-basic",
    version = "0.0",
)

bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_epiclabs_io_winman", "com_github_gdamore_tcell_v2", "com_github_rivo_tview")
